# AIRC

./: .gitignore  Cargo.toml  README.md  pyproject.toml
data/: sample_dem.json
radar-coverage/: package-lock.json  package.json
radar-coverage/src/: App.tsx
radar-dem/: package-lock.json  package.json
radar-dem/src/: App.tsx  index.css
src/: coverage.rs  dem.rs  lib.rs  visualize.rs
src/radarc/: __init__.py  coverage.py  dem.py  visualize.py
tests/: coverage_tests.rs
