[package]
name = "radarc"
version = "0.1.0"
edition = "2021"
authors = ["RadarC"]
description = "Radar coverage computation over DEMs with radio horizon consideration"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0"
ndarray = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotly = "0.9"
thiserror = "1.0"
bevy = { version = "0.12", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_winit",
    "png",
    "x11"
] }
bevy_egui = "0.24"

[dev-dependencies]
assert_approx_eq = "1.1"
