[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "radarc"
version = "0.1.0"
description = "Radar coverage computation with DEM and radio horizon consideration"
readme = "README.md"
authors = [{ name = "RadarC" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "plotly>=5.24",
]

[project.optional-dependencies]
examples = [
  "pandas>=2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/radarc"]
